--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,24 @@
 //This is my default tsconfig file for all my backend Typescript work going forward
+{
+    "compilerOptions": {
+        "module": "CommonJS",
+        "esModuleInterop": true,
+        "target": "ES6",
+        "moduleResolution": "Node",
+        "removeComments": true,
+        "sourceMap": false,
+
+        "outDir": "/dist",
+        "rootDir": "/src",
+        "resolveJsonModule": true,
+
+        "skipLibCheck": true,
+        "allowJs": true,
+        // "checkJs": true,
+
+        "strict": false,
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist/*", "src/static"],
+    "lib": ["es6"]
+}
